<resources>
    <string name="app_name">PackagesApp</string>
    <string name="action_settings">Settings</string>
    <string name="menu">Menu</string>
    <string name="Truck">Trucks</string>
    <string name="Client">Clients</string>
    <string name="Package">Packages</string>
    <string name="route">Routes</string>
    <string name="view">View</string>
    <string name="news">New</string>
    <string name="insert">Insert</string>
    <string name="title_activity_trucks">Trucks</string>
    <string name="title_activity_insert_truck">insertTruck</string>
    <string name="title_activity_view_trucks">viewTrucks</string>
    <string name="Height">Truck Height</string>
    <string name="Length">Truck Length</string>
    <string name="Width">Truck Width</string>
    <string name="Home">Back Home</string>
    <string name="title_activity_insert_owner">InsertOwner</string>
    <string name="OwnerName">Owner Name</string>
    <string name="OwnerAddress">Owner Address</string>
    <string name="OwnerStart">Start Availability</string>
    <string name="OwnerEnd">End Availability</string>
    <string name="TravelTime">Travel Time</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_view_owner">ViewOwner</string>
    <string name="title_activity_insert_package">InsertPackage</string>
    <string name="title_activity_view_package">ViewPackage</string>
    <string name="packageLenght">Package Length</string>
    <string name="packageHeight">Package Height</string>
    <string name="packageWidth">Package Width</string>
    <string name="packageDescription">Package Description</string>
    <string name="title_activity_routes">Routes</string>

</resources>
