<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@mipmap/android"
    android:focusable="false"
    android:clickable="false">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/menu"
        android:id="@+id/txtMenu"
        android:textSize="@android:dimen/notification_large_icon_width"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Truck"
        android:id="@+id/txtTrucks"
        android:textSize="@dimen/abc_action_bar_default_height_material"
        android:textIsSelectable="true"
        android:layout_below="@+id/txtMenu"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#ffffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Client"
        android:id="@+id/txtClients"
        android:textSize="@dimen/abc_action_bar_default_height_material"
        android:layout_marginTop="61dp"
        android:layout_below="@+id/txtTrucks"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#ffffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Package"
        android:id="@+id/txtPackagee"
        android:textSize="@dimen/abc_action_bar_default_height_material"
        android:layout_below="@+id/txtClients"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="58dp"
        android:textColor="#ffffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/route"
        android:id="@+id/txtRoute"
        android:textIsSelectable="false"
        android:textSize="@dimen/abc_action_bar_default_height_material"
        android:layout_marginTop="59dp"
        android:layout_below="@+id/txtPackagee"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#ffffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view"
        android:id="@+id/ViewT"
        android:textSize="50dp"
        android:layout_above="@+id/txtClients"
        android:layout_alignLeft="@+id/txtMenu"
        android:layout_alignStart="@+id/txtMenu"
        android:textColor="#ffffffff"
        android:onClick="jumpViewT" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert"
        android:id="@+id/InsertT"
        android:layout_marginLeft="151dp"
        android:layout_marginStart="151dp"
        android:textSize="50dp"
        android:layout_alignTop="@+id/ViewT"
        android:layout_toRightOf="@+id/txtMenu"
        android:layout_toEndOf="@+id/txtMenu"
        android:onClick="jumpInsertT"
        android:textColor="#ffffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view"
        android:id="@+id/ViewC"
        android:textSize="50dp"
        android:layout_alignBottom="@+id/txtClients"
        android:layout_alignLeft="@+id/ViewT"
        android:layout_alignStart="@+id/ViewT"
        android:textColor="#ffffffff"
        android:onClick="jumpViewOwner" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view"
        android:id="@+id/ViewP"
        android:textSize="50dp"
        android:layout_above="@+id/txtRoute"
        android:layout_alignLeft="@+id/ViewC"
        android:layout_alignStart="@+id/ViewC"
        android:textColor="#ffffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view"
        android:id="@+id/ViewR"
        android:textSize="50dp"
        android:layout_alignBottom="@+id/txtRoute"
        android:layout_alignLeft="@+id/ViewP"
        android:layout_alignStart="@+id/ViewP"
        android:textColor="#ffffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert"
        android:id="@+id/InsertC"
        android:layout_alignBottom="@+id/txtClients"
        android:layout_alignLeft="@+id/InsertT"
        android:layout_alignStart="@+id/InsertT"
        android:textSize="50dp"
        android:textColor="#ffffffff"
        android:onClick="jumpInsertOwner" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert"
        android:id="@+id/InserP"
        android:textSize="50dp"
        android:layout_above="@+id/txtRoute"
        android:layout_alignLeft="@+id/InsertC"
        android:layout_alignStart="@+id/InsertC"
        android:textColor="#ffffffff"
        android:onClick="jumpInsertPackage" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert"
        android:id="@+id/InsertR"
        android:textSize="50dp"
        android:layout_alignTop="@+id/ViewR"
        android:layout_alignLeft="@+id/InserP"
        android:layout_alignStart="@+id/InserP"
        android:textColor="#ffffffff" />

</RelativeLayout>
